fix home page header overlapping bug

--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -113,14 +113,13 @@ border: 0 none;
 
 div.head div.page-heading {
 position: absolute;
-top: 7px;
+top: 30px;
 left: 225px;
 width: 700px;
 }
 
 div.head h1 {
 color: #e7e7e7;
-margin-top: 18px;
 }
 
 div.head p.subhead {
